2009-02-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/v2test_ei.c:
	Fixed 2596921: v2test_ei test fails when using CIMXML interface

2008-12-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* cimc/cimclient.c:
	Fixed 2431835: XML client library not found. 

2008-11-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/*.c, backend/cimxml/indicationlistener.c:
	Fixed 2270179: Missing includes and values in return statements
	(patch by Pavol Rusnak)
	
2008-10-27  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* Makefile.am 
	Updated 2158091: sfcb modules belong in private dir
		use $libdir for default

2008-10-23  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* Makefile.am configure.ac cimc/cimcclient.c
	Fixed 2158091: sfcb modules belong in private dir

2008-09-06  Sean Swehla <smswehla@linux.vnet.ibm.com>
	* TEST/v2_testein.c
	Fixed 2102345: missing configuration of CIM-HOST-PORT in sblim-sfcc
	(patch by Pavol Rusnak)

2008-09-06  Sean Swehla <smswehla@linux.vnet.ibm.com>
	* TEST/print-types.c, backend/cimxml/constClass.c,
	backend/cimxml/indicationlistener.c, backend/cimxml/instance.c
	Fixed 2102339: Missing ret values in sblim-sfcc
	(patch by Pavol Rusnak)

2008-06-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
    * frontend/sfcc/sfcclient.c
    Better handling of NULL values for slp.

2008-05-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * cimc/cimcclient.c
    Check for valid connection type and return rc=3 and a message
    if incorrect.

    * TEST/v2test_gc.c
    Test valid handling of above, and check rc on existing tests

2008-05-01  Chris Buccella <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c, backend/cimxml/property.c, 
	backend/cimxml/qualifier.c, backend/cimxml/string.c:
	Made changes to quiet some gcc warnings

	* Makfile.am:
	Additions needed for large volume support feature

	* TEST/Makefile.am:
	Additions needed for new test_ programs

	* configure.ac:
	Bumped version number to 2.1.0