@@ -3,6 +3,8 @@ Small Footprint CIM Client Library NEWS
 Changes since 2.2
 =================
 
+Bugs:
+- 2691478: sfcc 2.1.0 cannot handle OutParams on Extrinsic Method Call
 
 Changes in 2.2
 ==============
